--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,10 @@ body {
 }
 
 footer {
-  padding: var(--spacing-6) var(--spacing-0);
+  /* width: "100%";
+  height: 80px;
+  background-color: "#f5f5f5";
+  position: "relative"; */
 }
 
 hr {
