--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
 /* CSS Custom Properties Definitions */
 
+@font-face {
+  font-family: "OpenSans";
+  src: local("OpenSans"),
+    url(../fonts/OpenSans-Regular.ttf) format("truetype");
+}
+
 :root {
   --maxWidth-none: "none";
   --maxWidth-xs: 20rem;
@@ -30,8 +36,7 @@
   --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
-    Times, serif;
+  --fontFamily-serif: "OpenSans";
   --font-body: var(--fontFamily-serif);
   --font-heading: var(--fontFamily-sans);
   --fontWeight-normal: 400;
